fixing bottom 2 buttons getting squished

--- a/public/style.css
+++ b/public/style.css
@@ -525,6 +525,7 @@ button {
 	background: #333;
 	width: 100%;
 	display: inline-flex;
+	flex-shrink: 0;
 }
 
 .bottomSavedSongsDiv .skyButton {
